Minor editorial clean up of data table section placeholder.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1558,13 +1558,14 @@ For additional guidance, see <a href="#kbd_selection_follows_focus">Deciding Whe
 
     <section class="widget" id="table">
       <h3>Table</h3>
-      <p>Drafting this section is <a href="https://github.com/w3c/aria-practices/issues/90">issue 90</a>. </p>
       <p>
-        [Place holder for a to-be-written section about data tables]
-        While writing the grid pattern, the topic of data tables came up because the grid pattern has text clarifying when to use grid verses when to use table.
-        There was a suggestion to cover tables at the same time in the grid section.
-        That made the grid pattern section feel overwhelming so adding a placeholder for a potential table section here.
-        The grid pattern links to this section.
+        Work on drafting this section is tracked by 
+        <a href="https://github.com/w3c/aria-practices/issues/90">issue 90</a>. 
+      </p>
+      <p>
+        This is a place holder for a to-be-written section about data tables.
+        The grid pattern includes text describing how to choose between using grid and table, and it links to this section.
+        This section does not necessarily have to be part of the design pattern section.
       </p>
     </section>
 
