--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1692,6 +1692,8 @@ For additional guidance, see <a href="#kbd_selection_follows_focus">Deciding Whe
               <li><kbd>Right Arrow</kbd>: Moves focus to the next control.  Optionally, focus movement may wrap from the last element to the first element. </li>
             </ul>
           </li>
+          <li><kbd>Home</kbd> (Optional): Moves focus to first element.</li>
+          <li><kbd>End</kbd> (Optional): Moves focus to last element.</li>
         </ul>
         <ol class="note">
           <li>If the items in a toolbar are arranged vertically:
